# FastApi

Revesion/: asyn_await.ipynb  main.py  python_datatypes.ipynb  python_datatypes.py
Task_Management_App/: .env  main.py
Task_Management_App/migration/: env.py
Task_Management_App/migration/versions/: 693e22f0f3a7_add_user_id_to_tasks.py
Task_Management_App/src/task/: controller.py  dtos.py  models.py  routers.py
Task_Management_App/src/users/: controller.py  dtos.py  models.py  routers.py
Task_Management_App/src/utils/: db.py  helpers.py  settings.py
YT_series/: dtos.py  main.ipynb  main.py  mock_data.py
day_1/: main.py  pyproject.toml
day_2/: README.md  main.py  patients.json  pyproject.toml
fastapi_ML_project/: .gitignore  README.md  fastapi_ml_model.ipynb  frontend.py  insurance.csv  main.py  model.pkl  pyproject.toml
fastapi_ML_project/schema/: user_input.py
pydantic_crash_course/: README.md  main.py  pyproject.toml
